<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.edu.tdc.tracnghiem.fragments.MultiChoice2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lblQuestion_margin"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/edtCau5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:editable="false"
            android:lines="2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <EditText
            android:id="@+id/edtA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:editable="false"
            android:text="@string/choice" />

        <Switch
            android:id="@+id/swtA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edtA"
            android:layout_marginLeft="@dimen/choice_margin"
            android:layout_toRightOf="@id/edtA"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn" />

        <EditText
            android:id="@+id/edtB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtA"
            android:layout_below="@id/edtA"
            android:editable="false"
            android:text="@string/choice" />

        <Switch
            android:id="@+id/swtB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edtB"
            android:layout_alignLeft="@id/swtA"
            android:layout_toRightOf="@id/edtB"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn" />

        <EditText
            android:id="@+id/edtC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edtB"
            android:layout_below="@id/edtB"
            android:editable="false"
            android:text="@string/choice" />

        <Switch
            android:id="@+id/swtC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edtC"
            android:layout_alignLeft="@id/swtB"
            android:layout_toRightOf="@id/edtC"
            android:textOff="@string/textOff"
            android:textOn="@string/textOn" />
    </RelativeLayout>


</LinearLayout>
